# IOT_WeatherStation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  deploy.sh  main.c
cloud/: iothub.c  iothub.h
device/: weatherstation.c  weatherstation.h
payload/: bme280.c  bme280.h  led.c  led.h  payload.c  payload.h  photocell.c  photocell.h  wiring.c  wiring.h
